# HikvisionCCD-opencv

./: CMakeLists.txt  LICENSE  README.md
include/: yukihikccd.hpp
src/: main.cpp
